@@ -1,7 +1,7 @@
-# This Build.PL for Mojo-UserAgent-CookieJar-ChromeMacOS was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.007.
+# This Build.PL for Mojo-UserAgent-CookieJar-ChromeMacOS was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.015.
 use strict;
 use warnings;
 
 use 5.010;
-use Module::Build::Tiny 0.039;
+use Module::Build::Tiny 0.034;
 Build_PL();
