@@ -10,6 +10,12 @@ Mojo::UserAgent::CookieJar::ChromeMacOS - readonly Chrome(MacOSx) cookies for Mo
     my $ua = Mojo::UserAgent->new;
     $ua->cookie_jar(Mojo::UserAgent::CookieJar::ChromeMacOS->new);
 
+    # For Linux
+    Mojo::UserAgent::CookieJar::ChromeMacOS->new(
+        file => '~/.config/google-chrome/Default/Cookies',
+        pass => 'peanuts', # hardcode for Linux
+    );
+
 # DESCRIPTION
 
 Mojo::UserAgent::CookieJar::ChromeMacOS tries to read the cookie from Chrome on MacOSx.
@@ -31,4 +37,4 @@ it under the same terms as Perl itself.
 
 # SEE ALSO
 
-[HTTP::Cookies::ChromeMacOS](https://metacpan.org/pod/HTTP::Cookies::ChromeMacOS)
+[HTTP::Cookies::ChromeMacOS](https://metacpan.org/pod/HTTP%3A%3ACookies%3A%3AChromeMacOS)
