@@ -1,6 +1,8 @@
 Revision history for Mojo-UserAgent-CookieJar-ChromeMacOS
 
 {{$NEXT}}
+        - copy SQLite file to read
+        - support Linux
 
 0.01  2016-06-06 12:22:11 CST
         - Initial release
